fixed double place on top bug, still bug with random tile being placed in the middle but not being collapsed or in the right spot?